# sectxt

./: .gitignore  README.md  SECURITY.md  requirements.txt  setup.cfg
sectxt/: __init__.py  command_line.py
test/: __init__.py  test_sectxt.py
