[metadata]
name = sectxt
version = attr: sectxt.__version__
author = Bart Lengkeek
author_email = b.c.lengkeek@minezk.nl
description = security.txt parser and validator
license = EUPL-1.2
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
zip_safe = True
packages = sectxt
install_requires =
    requests
    python-dateutil
