[metadata]
name = sectxt
version = attr: sectxt.__version__
author = DigitalTrustCenter
author_email = algemeen@digitaltrustcenter.nl
description = security.txt parser and validator
license = EUPL-1.2
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
zip_safe = True
packages = sectxt
install_requires =
    requests>=2.32.3
    python-dateutil>=2.9.0.post0
    langcodes>=3.5.0
    pytest>=8.3.4
    requests-mock>=1.12.1
    validators>=0.34.0
    PGPy-dtc>=0.1.1

[options.entry_points]
console_scripts =
    sectxt = sectxt.command_line:main
